--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -106,5 +106,30 @@ header{
 }
 
 /* -----------------------------------------------------------------------------------------*/
-/* -----------------------------------------------------------------------------------------*/
-/* -----------------------------------------------------------------------------------------*/
+
+
+/*=========================================================================================*/
+/*===== Mise en forme description ======================================================*/
+/*=========================================================================================*/
+
+.description{
+    background-color: rgba(255,255,255,0.75);
+    border: 2px solid #a88680;
+    box-shadow: 3px 3px 3px #000;
+    width: 70%;
+    height: 35em;
+    margin-left: 2em;
+    margin-top: 1.5em;
+    padding-left: 1em;
+    padding-right: 1em;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    word-wrap: break-word;
+    text-align: justify;
+}
+
+
+.description h1{
+    text-decoration: underline;
+    text-align: center;
+}
