--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -109,7 +109,7 @@ header{
 
 
 /*=========================================================================================*/
-/*===== Mise en forme description ======================================================*/
+/*===== Mise en forme description =========================================================*/
 /*=========================================================================================*/
 
 .description{
@@ -132,4 +132,54 @@ header{
 .description h1{
     text-decoration: underline;
     text-align: center;
+}
+
+/*=========================================================================================*/
+/*===== Bandeau Réseau Social via sprite===================================================*/
+/*=========================================================================================*/
+
+#fb, #tw, #lk{
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    display:block;
+    border: 1px solid white;
+    border-radius: 10px;
+    box-shadow: 0 0 2px #666;
+    margin : 5px;
+}
+
+#fb:hover,#tw:hover,#lk:hover{
+    background-color: rgba(100,100,100,0.8);
+    box-shadow: 0 0 10px #222;
+}
+
+.social{
+    background-color: rgba(255,255,255,0.75);
+    border: 2px solid #a88680;
+    width: 172px;
+    height: 62px;
+    margin: 1.5em;
+    padding: 0;
+    position:absolute;
+    bottom: 0;
+    right: 0;
+    box-shadow: 0 0 3px #000;
+}
+
+#fb{
+    background-position: 0 0;
+    background-image: url("../img/social.png");
+}
+
+#tw{
+    background-image: url("../img/social.png");
+    background-position: -50px 0;
+    left:55px;
+}
+
+#lk{
+    background-image: url("../img/social.png");
+    background-position: -100px -50px;
+    left:110px;
 }
