annulation ajax departement hashmap a cause de tri alphabetique

--- a/src/main/webapp/css/gallery.css
+++ b/src/main/webapp/css/gallery.css
@@ -3,7 +3,7 @@
     display: flex;
     max-width: 95%;
     height: 13em;
-    margin: 50px auto;
+    margin: 1.5em auto;
     padding: 0;
     background-color: rgba(255,255,255,0.75);
     border: 2px solid #a88680;
