--- a/src/main/webapp/css/displaySpot.css
+++ b/src/main/webapp/css/displaySpot.css
@@ -3,9 +3,10 @@
 }
 
 #displayDiv{
-    position:absolute;
-    left: 19em;
-    right: 1em;
+    top: 4em;
+    left: 20em;
+    margin:1em;
+    max-height: 40em;
 }
 
 #navDiv{
@@ -18,4 +19,8 @@
     box-shadow: 3px 3px 3px #000;
     width: 17em;
     padding: 0.5em;
+}
+
+.descriptionDiv{
+    width: 80%;
 }
