--- a/src/main/webapp/css/displaySpot.css
+++ b/src/main/webapp/css/displaySpot.css
@@ -37,3 +37,39 @@ h5{
     margin-top: -4em;
     visibility: hidden;
 }
+
+#labelCommentaire{
+    display: block;
+    text-decoration: underline;
+    padding: 1em 0;
+}
+
+.commentaireForm{
+    position: static;
+    display: flex;
+    flex-direction: column;
+}
+
+.commentaireForm textarea{
+    width: 100%;
+    margin: 0.5em auto;
+    border-radius: 5px;
+    padding: 0;
+    height: 8em;
+}
+
+.commentaireForm textarea:focus {
+    border: 2px solid #a88680;
+}
+
+input[type=button]{
+    align-self: flex-end;
+    margin: 0.5em 0;
+    background-color: #a88680;
+    border: 1px solid rgb(173,173,173);
+    border-radius: 2px;
+    line-height: 2.5em;
+    box-shadow: 0 0 3px #000;
+    font-family: 'Merienda', 'Open Sans', sans-serif;
+    font-size: 0.9em;
+}
