--- a/src/main/webapp/css/header.css
+++ b/src/main/webapp/css/header.css
@@ -12,11 +12,11 @@ header{
     height: 2em;
 }
 
-#menu{
+.menu{
     display: flex;
     flex-direction: row;
 }
-#user{
+.user{
     display: flex;
     flex-direction: row;
 }
@@ -53,49 +53,60 @@ header{
     box-shadow: 3px 3px 3px #000;
 }
 
-
 .menu-button{
     margin:0;
     padding: 0 0.5em;
     background-color: white;
     border-bottom: 1px solid #a88680;
     border-right: 1px solid #a88680;
-    border-left: 1px solid #a88680;
+    border-left: 0px solid #a88680;
     text-align: center;
     display:flex;
     justify-content: center;
     align-items: center;
     font-weight: 700;
+    border-collapse: collapse;
 }
 
-#menu a{
+.menu a{
     line-height: 3em; /*Centrage vertical des menus et extension de la zone cliquable*/
     padding-right: 0.5em;
     padding-left: 0.5em;
     color:black;
     text-decoration: none;
 }
+#userConnected{
+    display: flex;
+}
+#username{
+    padding: 0.5em;
+    align-content: center;
+}
 
-#user a{
+.user a{
     padding-top: 0.3em;
     padding-right: 0.5em;
     padding-left: 0.5em;
+    color:black;
+    text-decoration: none;
 }
 
 .menu-button:hover{
-    background-color: rgba(128,142,168,0.5);
+    background-color: rgba(128,142,168,0.75);
+    border-bottom: 5px solid #ee4e00;
 }
 
-/* Mise en forme supplémentaire pour différencier #menu et #users */
+/* Mise en forme supplémentaire pour différencier .menu et .users */
 
-/* Mise en forme supplémentaire pour les derniers éléments #menu et #users */
+/* Mise en forme supplémentaire pour les derniers éléments .menu et .users */
 
-#menu p:last-of-type{
-    border-right: 2px solid #a88680;
+.menu p:first-of-type{
+    border-left: 0px solid #a88680;
 }
 
-#user p:last-of-type{
+.user p:last-of-type{
     border-bottom-right-radius: 12px;
 }
+
 
 /* -----------------------------------------------------------------------------------------*/
