--- a/src/main/webapp/css/header.css
+++ b/src/main/webapp/css/header.css
@@ -12,15 +12,10 @@ header{
     height: 2em;
 }
 
-.menu{
+.menu, .user{
     display: flex;
     flex-direction: row;
 }
-.user{
-    display: flex;
-    flex-direction: row;
-}
-
 
 /* Mise en forme du logo */
 
@@ -55,7 +50,7 @@ header{
 
 .menu-button{
     margin:0;
-    padding: 0 0.5em;
+    padding: 0 1em;
     background-color: white;
     border-bottom: 1px solid #a88680;
     border-right: 1px solid #a88680;
@@ -69,23 +64,16 @@ header{
 }
 
 .menu a{
-    line-height: 3em; /*Centrage vertical des menus et extension de la zone cliquable*/
+    line-height: 2em; /*Centrage vertical des menus et extension de la zone cliquable*/
     padding-right: 0.5em;
     padding-left: 0.5em;
     color:black;
     text-decoration: none;
 }
-#userConnected{
-    display: flex;
-}
-#username{
-    padding: 0.5em;
-    align-content: center;
-}
 
 .user a{
-    padding-top: 0.3em;
-    padding-right: 0.5em;
+    line-height: 3em;
+    padding-right: 1em;
     padding-left: 0.5em;
     color:black;
     text-decoration: none;
@@ -94,9 +82,8 @@ header{
 .menu-button:hover{
     background-color: rgba(128,142,168,0.75);
     border-bottom: 5px solid #ee4e00;
+    box-sizing: border-box;
 }
-
-/* Mise en forme supplémentaire pour différencier .menu et .users */
 
 /* Mise en forme supplémentaire pour les derniers éléments .menu et .users */
 
@@ -108,5 +95,74 @@ header{
     border-bottom-right-radius: 12px;
 }
 
+.user p:first-of-type{
+    border-left: 1px solid #a88680;
+}
 
-/* -----------------------------------------------------------------------------------------*/
+/* Mise en forme du menu déroulant */
+
+.userDrop{
+    max-height: 50em;
+    display: flex;
+    flex-direction: column;
+    width: 10em;
+}
+
+.userDrop > div{
+    height: 3em;
+}
+
+#userConnected{
+    height: 100%;
+    border-bottom-right-radius: 12px;
+}
+
+#username{
+    display: flex;
+    color:black;
+    text-decoration: none;
+}
+
+#username span{
+    padding: 0.5em;
+}
+
+#iconUser{
+    padding-right: 0.5em;
+}
+
+.userDrop > ul{
+    margin: 0;
+    padding: 0;
+}
+
+#items {
+    max-height: 0;
+    overflow: hidden;
+    transition: 0s;
+    position: absolute;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    width: 200%;
+}
+
+.container:hover #items {
+    max-height: 50em;
+    transition: 1.5s;
+}
+
+#items > li > a {
+    display: block;
+    margin: 0;
+    padding: 0.5em;
+    color: black;
+    background-color: white;
+    text-decoration: none;
+}
+
+#items > li > a:hover{
+    background-color: rgba(128,142,168,0.75);
+    border-bottom: 5px solid #ee4e00;
+    box-sizing: border-box;
+}
