--- a/src/main/webapp/css/treeview.css
+++ b/src/main/webapp/css/treeview.css
@@ -45,7 +45,7 @@
     padding-left: 25px;
     background-repeat: no-repeat;
     background-position: -25px top;
-    background-image: url("../img/plus-minus.png");
+    background-image: url("../images/plus-minus.png");
     content: "";
     height: 25px;
 }
