--- a/src/main/webapp/css/header.css
+++ b/src/main/webapp/css/header.css
@@ -12,7 +12,7 @@ header{
     height: 2em;
 }
 
-.menu, .user{
+.menu, .user, .menuDashboard{
     display: flex;
     flex-direction: row;
 }
@@ -72,7 +72,7 @@ header{
     padding-top: 0.8em;
 }
 
-.menu a{
+.menu a, .menuDashboard a{
     line-height: 2em; /*Centrage vertical des menus et extension de la zone cliquable*/
     padding-right: 0.5em;
     padding-left: 0.5em;
