--- a/src/main/webapp/css/form.css
+++ b/src/main/webapp/css/form.css
@@ -123,7 +123,7 @@ textarea{
 }
 
 .photoSaved{
-    margin: 0;
+    margin: 0.5em 0;
     padding: 0;
     display: inline-flex;
     flex-direction: column;
