--- a/src/main/webapp/css/form.css
+++ b/src/main/webapp/css/form.css
@@ -95,7 +95,7 @@ textarea{
 }
 
 /*=========================================================================================*/
-/*===== Mise en forme galerie photos enregistrées*=========================================*/
+/*===== Mise en forme galerie photos enregistrées =========================================*/
 /*=========================================================================================*/
 
 #photoForm{
