F6-F7: Modification condition de modification des spots pour permettre à l'admin de modifier tous les spots etc... Gestion du tag officiel par admin ok, back et front

--- a/src/main/webapp/css/displaySpot.css
+++ b/src/main/webapp/css/displaySpot.css
@@ -73,3 +73,8 @@ input[type=button]{
     font-family: 'Merienda', 'Open Sans', sans-serif;
     font-size: 0.9em;
 }
+
+#iconeOfficiel{
+    float: right;
+    margin: 0.5em;
+}
