--- a/src/main/webapp/css/form.css
+++ b/src/main/webapp/css/form.css
@@ -94,6 +94,14 @@ textarea{
     padding: 0;
 }
 
+.officielCheckbox{
+    display: flex;
+    justify-content: flex-start;
+    margin:0.5em;
+    padding: 0;
+    font-size: 0.8em;
+}
+
 /*=========================================================================================*/
 /*===== Mise en forme galerie photos enregistrées =========================================*/
 /*=========================================================================================*/
