--- a/src/main/webapp/css/form.css
+++ b/src/main/webapp/css/form.css
@@ -110,7 +110,7 @@ textarea{
     flex-direction: column;
 }
 
-#photoLabel{
+#photoLabel, #listeSpots{
     text-align: center;
     margin: 0.5em;
     padding: 0.5em;
