--- a/src/main/webapp/css/displayNav.css
+++ b/src/main/webapp/css/displayNav.css
@@ -60,6 +60,7 @@
 
 .topoDisplayDiv h3{
     margin: 0.5em;
+    padding: 0;
     font-size: 0.9em;
 }
 
@@ -73,6 +74,7 @@
     justify-content: space-between;
     list-style: none;
     margin: 0.5em;
+    width: 95%;
 }
 
 .itemTopo a{
