--- a/src/main/webapp/css/displayNav.css
+++ b/src/main/webapp/css/displayNav.css
@@ -111,4 +111,5 @@
 .buttonReservationTopo:hover{
     background-color: rgba(128,142,168,0.75);
     box-sizing: border-box;
+    cursor: pointer;
 }
