C2 : Select Topo spot resp ok

--- a/src/main/webapp/css/styleResp.css
+++ b/src/main/webapp/css/styleResp.css
@@ -17,6 +17,17 @@
         padding: 0;
     }
 
+    #selectTopoSpot, .resultatDiv{
+        box-sizing: border-box;
+        width: 100%;
+        margin-right: auto;
+        margin-left: auto;
+    }
+
+    #selectTopoSpot table{
+        word-break: break-word;
+        width: 100%;
+    }
 }
 
 @media screen and (max-width: 850px) {
