--- a/src/main/webapp/css/dashboard.css
+++ b/src/main/webapp/css/dashboard.css
@@ -26,6 +26,10 @@
     box-sizing: border-box;
 }
 
+#addSpotButton, #addTopoButton{
+    flex-grow: 0;
+}
+
 .menuDashboard button.active{
     background-color: rgba(128,142,168,0.33);
 }
