--- a/src/main/webapp/css/table.css
+++ b/src/main/webapp/css/table.css
@@ -7,6 +7,8 @@ table{
     border: 2px solid #a88680;
     margin: 1em auto;
     font-size: 1.1em;
+    word-break: break-word;
+    width: 100%;
 }
 
 table a{
